[gd_scene load_steps=8 format=3 uid="uid://co7b2f7gh5i1g"]

[ext_resource type="Script" path="res://Scripts/AxeKnight.gd" id="1_8q12i"]
[ext_resource type="Shape2D" uid="uid://saihr05rsenh" path="res://Shapes/player_shape.tres" id="2_a36ui"]
[ext_resource type="Script" path="res://Scripts/LookAt.gd" id="4_8x1hy"]
[ext_resource type="Texture2D" uid="uid://cyx0ha2eq5vjp" path="res://Sprites/point.png" id="4_y587k"]
[ext_resource type="Script" path="res://Scripts/CastAt.gd" id="5_baduv"]
[ext_resource type="Shape2D" uid="uid://qauq24gmkhoj" path="res://Shapes/slash.tres" id="6_mbwxb"]
[ext_resource type="Texture2D" uid="uid://ba3mof5dtftsm" path="res://Sprites/test char.png" id="6_t2cim"]

[node name="AxeKnight" type="CharacterBody2D" node_paths=PackedStringArray("_dash_timer", "_aiming", "_bump_collision", "_slash_cast")]
collision_mask = 17
script = ExtResource("1_8q12i")
_speed = 384.0
_gravity = 1024.0
_jump_speed = 640.0
_dash_jump_speed = 960.0
_dash_timer = NodePath("DashTimer")
_dash_speed = 768.0
_dash_end_jump = 128.0
_dash_slam_requirement = 0.7
_aiming = NodePath("LookAt")
_bump_collision = NodePath("SlamCheck")
_slash_cast = NodePath("SlashAttackCheck")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = ExtResource("2_a36ui")

[node name="LookAt" type="Node2D" parent="." node_paths=PackedStringArray("_aim")]
script = ExtResource("4_8x1hy")
_distance = 128.0
_aim = NodePath("Node2D")

[node name="Node2D" type="Node2D" parent="LookAt"]
position = Vector2(128, 0)

[node name="Sprite2D" type="Sprite2D" parent="LookAt/Node2D"]
texture = ExtResource("4_y587k")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="SlamCheck" type="ShapeCast2D" parent="."]
shape = ExtResource("2_a36ui")
target_position = Vector2(5, 0)
collision_mask = 16
script = ExtResource("5_baduv")
_length = 1.0

[node name="SlashAttackCheck" type="ShapeCast2D" parent="."]
shape = ExtResource("6_mbwxb")
target_position = Vector2(128, 0)
collision_mask = 256
script = ExtResource("5_baduv")
_length = 128.0

[node name="TestChar" type="Sprite2D" parent="."]
scale = Vector2(0.08, 0.08)
texture = ExtResource("6_t2cim")

[connection signal="timeout" from="DashTimer" to="." method="EndDash"]
